# cargo-dependency-language-server

./: .gitignore  Cargo.toml
crates/language-server/: Cargo.toml
crates/language-server/src/: main.rs
crates/toml/: Cargo.toml
crates/toml/src/: git.rs  lib.rs  update.rs
crates/zed/: Cargo.toml  extension.toml
crates/zed/src/: toml.rs
