[workspace]
members = ["crates/language-server", "crates/toml"]
resolver = "2"
default-members = ["crates/language-server"]
exclude = ["crates/zed"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"


[workspace.dependencies]
toml = { version = "0.1.0", path = "crates/toml", default-features = false }
