[package]
name = "toml"
edition.workspace = true
license.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
git2 = "0.18"
crates-index = "2.8.0"
http = "0.2"
reqwest = {version = "0.11", features = ["gzip"]}
